--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,10 +2,8 @@ name: Build app and update Docker image
 
 on:
   push:
-#    branches:
-#      - master
-#    tags:
-#      - '*'
+    branches:
+      - master
 
 jobs:
   build:
