--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_GRAPHQL_URL=https://termen.netwerkdigitaalerfgoed.nl/graphql
+VITE_GRAPHQL_URL=https://termennetwerk-api.netwerkdigitaalerfgoed.nl/graphql
