--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "network-of-terms-demo",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "lint": "eslint --ext .ts,.vue src",
+    "fix": "eslint --ext .ts.,.vue src --fix",
+    "dev": "vite"
   },
   "dependencies": {
     "graphql": "^15.3.0",
@@ -13,7 +15,16 @@
     "vue-router": "^4.0.0-beta.3"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-rc.4",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/eslint-config-typescript": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^7.0.0-beta.4",
     "typescript": "^3.9.7",
     "vite": "^1.0.0-rc.3"
   }
