--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,15 +16,26 @@ jobs:
         id: vars
         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-      - name: Build and push image to GitHub Packages
-        uses: docker/build-push-action@v1.1.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: ${{ github.repository }}/network-of-terms-demo
-          tag_with_ref: true
-          tags: ${{ steps.vars.outputs.sha_short }}
+          # See https://github.com/docker/build-push-action/issues/126.
+          driver-opts: image=moby/buildkit:master
+
+      - name: Log in to Docker registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
+
+      - name: Build and push image to registry
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ steps.vars.outputs.docker_image }}:${{ steps.vars.outputs.sha_short }}
 
       - uses: digitalocean/action-doctl@v2
         with:
