--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,9 @@ jobs:
 
       - name: Set variables
         id: vars
-        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+        run: |
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+          echo "::set-output name=docker_image::ghcr.io/netwerk-digitaal-erfgoed/network-of-terms-demo"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
