style: Apply coding style
* Enforce coding style using eslint.
* We use gts in our other repositories, but that yields too many
  conflicts with the Vue eslint rules. Therefore, use the latter,
  but where those have no opinion configure some of rules separately
  to make the output look closer to that of gts.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "vite build",
     "compile": "tsc",
     "lint": "eslint --ext .ts,.vue src",
-    "fix": "eslint --ext .ts.,.vue src --fix",
+    "fix": "eslint --ext .ts,.vue src --fix",
     "dev": "vite"
   },
   "dependencies": {
