--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,7 @@ jobs:
           push: true
           tags: |
             ${{ steps.vars.outputs.docker_image }}:${{ steps.vars.outputs.sha_short }}
+            ${{ steps.vars.outputs.docker_image }}:latest
 
       - uses: digitalocean/action-doctl@v2
         with:
