--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "graphql": "^15.5.0",
     "villus": "^1.0.0-rc.17",
-    "vue": "^3.1.5",
+    "vue": "^3.2.3",
     "vue-i18n": "^9.1.6",
     "vue-router": "^4.0.10"
   },
@@ -19,6 +19,7 @@
     "@types/jquery": "^3.5.5",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.1",
+    "@vue/compiler-sfc": "^3.2.3",
     "@vue/eslint-config-standard": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^7.27.0",
@@ -28,6 +29,6 @@
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.10.0",
     "typescript": "^4.3.5",
-    "vite": "^1.0.0-rc.9"
+    "vite": "^1.0.0-rc.13"
   }
 }
