--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v2.4.0
         with:
           node-version: 12.x
-      - run: npm install
+      - run: npm ci
       - run: npm run lint
       - run: npm run compile
       - run: npm run build
