--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2.4.0
         with:
-          node-version: 12.x
-      - run: npm install
+          node-version: 14.x
+      - run: npm ci
       - run: npm run lint
       - run: npm run build
