--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@heroicons/vue": "^1.0.5",
     "@types/bootstrap-select": "^1.13.3",
     "@types/jquery": "^3.5.8",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
