--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "clipboard": "^2.0.11",
-    "graphql": "^16.6.0",
+    "graphql": "<16.7.0",
     "villus": "^3.1.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
