--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 16.x
+          node-version: lts/*
       - run: npm ci
       - run: npm run lint
       - run: npm run build
