--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
   },
   "dependencies": {
     "clipboard": "^2.0.11",
-    "graphql": "<16.7.0",
+    "graphql": "^16.8.1",
     "villus": "^3.3.0",
     "vue": "^3.4.19",
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@heroicons/vue": "^1.0.6",
+    "@heroicons/vue": "^2.1.1",
     "@types/bootstrap-select": "^1.13.7",
     "@types/jquery": "^3.5.29",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "@vitejs/plugin-vue": "^2.3.4",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/compiler-sfc": "^3.4.18",
-    "@vue/eslint-config-standard": "^7.0.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^8.7.1",
+    "eslint-plugin-vue": "^9.21.1",
     "typescript": "^5.3.3",
-    "vite": "^2.9.14",
+    "vite": "^5.1.3",
     "vue-tsc": "^1.8.27"
   }
 }
