feat: Remove obsolete queryMode

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_GRAPHQL_URL=http://localhost:3123/graphql
+#VITE_GRAPHQL_URL=http://localhost:3123/graphql
+VITE_GRAPHQL_URL=https://termennetwerk-api.netwerkdigitaalerfgoed.nl/graphql
