--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,29 +19,26 @@ jobs:
       - name: Set variables
         id: vars
         run: |
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-          echo "::set-output name=docker_image::ghcr.io/netwerk-digitaal-erfgoed/network-of-terms-demo"
+          echo "docker_image=${{ env.REGISTRY}}/${{ github.repository }}" >> $GITHUB_OUTPUT
+          echo "build_tag=${ GITHUB_SHA::7 }-$(git show -s --format=%cd --date=format:'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.10.0
-        with:
-          # See https://github.com/docker/build-push-action/issues/126.
-          driver-opts: image=moby/buildkit:master
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker registry
-        uses: docker/login-action@v3.4.0
+        uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
 
       - name: Build and push image to registry
-        uses: docker/build-push-action@v6.15.0
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: |
-            ${{ steps.vars.outputs.docker_image }}:${{ steps.vars.outputs.sha_short }}
+            ${{ steps.vars.outputs.docker_image }}:${{ steps.vars.outputs.build_tag }}
             ${{ steps.vars.outputs.docker_image }}:latest
 
       - uses: digitalocean/action-doctl@v2
@@ -50,7 +51,7 @@ jobs:
       # See https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#updating-a-deployment
       - name: Update deployment
         run: |
-          kubectl set image deployment/network-of-terms-demo app=${{ steps.vars.outputs.docker_image }}:${{ steps.vars.outputs.sha_short }} --record
+          kubectl set image deployment/network-of-terms-demo app=${{ steps.vars.outputs.docker_image }}:${{ steps.vars.outputs.build_tag }} --record
 
       - name: Verify deployment
         run: kubectl rollout status deployment/network-of-terms-demo
