--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,53 +5,7 @@ on:
     branches:
       - master
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v6
-
-      - name: Set variables
-        id: vars
-        run: |
-          echo "docker_image=${{ env.REGISTRY}}/${{ github.repository }}" >> $GITHUB_OUTPUT
-          echo "build_tag=$(git show -s --format=%cd-%h --date=format:%Y%m%d%H%M%S)" >> $GITHUB_OUTPUT
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
-
-      - name: Build and push image to registry
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ steps.vars.outputs.docker_image }}:${{ steps.vars.outputs.build_tag }}
-            ${{ steps.vars.outputs.docker_image }}:latest
-
-      - uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      - name: Store DigitalOcean credentials
-        run: doctl kubernetes cluster kubeconfig save nde
-
-      # See https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#updating-a-deployment
-      - name: Update deployment
-        run: |
-          kubectl set image deployment/network-of-terms-demo app=${{ steps.vars.outputs.docker_image }}:${{ steps.vars.outputs.build_tag }} --record
-
-      - name: Verify deployment
-        run: kubectl rollout status deployment/network-of-terms-demo
+  deploy:
+    uses: netwerk-digitaal-erfgoed/workflows/.github/workflows/deploy.yml@main
+    secrets: inherit
